--- a/css/custom.css
+++ b/css/custom.css
@@ -2,5 +2,6 @@ img#biologo {
     zoom: 30%;
 }
 p.lead.sectionLead{
-    style="color: #333333;"
+    color: #4a4545;
+    font-family: "Times New Roman", Times, serif;
 }
