--- a/css/custom.css
+++ b/css/custom.css
@@ -15,3 +15,11 @@ p.lead.sectionLeadAbout{
 .marginForPages{
  margin-top: 30px;   
 }
+
+.AboutCoreValue{
+    color: #31708f;
+}
+
+.AboutCoreValueP{
+    color: #428bca;
+}
