--- a/Landing Page - Start Bootstrap Theme_files/landing-page.css
+++ b/Landing Page - Start Bootstrap Theme_files/landing-page.css
@@ -18,11 +18,12 @@ h4,
 h5,
 h6 {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    /*font-family: "Arial";*/
     font-weight: 700;
 }
 
 .topnav {
-    font-size: 14px; 
+    font-size: 16px; 
 }
 
 .lead {
