--- a/css/custom.css
+++ b/css/custom.css
@@ -2,8 +2,9 @@ img#biologo {
     zoom: 30%;      
     -ms-zoom: 0.3;
     -webkit-zoom: 0.3;
-    -moz-transform:  scale(0.4,0.4);
+    -moz-transform:  scale(0.3,0.3);
     -moz-transform-origin: left top;
+    position: absolute;
 }
 
 p.lead.sectionLead{
