--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,8 @@
 img#biologo {
-    zoom: 30%;      
-    -ms-zoom: 0.3;
-    -webkit-zoom: 0.3;
-    -moz-transform:  scale(0.3,0.3);
-    -moz-transform-origin: left top;
+    max-width: 73%; /*set the width or max-width*/
+    max-height: 73%;
     position: absolute;
+    -moz-transform-origin: 0 0;
 }
 
 p.lead.sectionLead{
@@ -30,8 +28,10 @@ p.lead.sectionLeadAbout{
 }
 
 .background-image{
-    -moz-transform:  scale(0.1,0.1);
-    -moz-transform-origin: left top;
+    position: relative;
+    display: inline;
+    width: 12%; /*set the width or max-width*/
+    height: 12%;
 }
 
 #DonateButtonNav{
